# telemetry_prototype

./: CMakeLists.txt  README.md
include/telemetry2/: data.h  message_telemetry_filler.h  mode.h  name_generator.h  telemetry2.h  telemetry_struct.h
src/: data.cpp  message_telemetry_filler.cpp  mode.cpp  name_generator.cpp  telemetry2.cpp  telemetry_app.cpp  telemetry_struct.cpp
